hphp/hack/test/typecheck/let/let_foreach_kv.php.exp
File "let_foreach_kv.php", line 8, characters 8-8:
Unbound name: k (a global constant) (Naming[2049])
